# ha-sadales-tikls

./: .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
custom_components/sadales_tikls/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  manifest.json  sensor.py  statistics.py  strings.json
custom_components/sadales_tikls/translations/: en.json  lv.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_statistics.py
tests/fixtures/: consumption.json  object_list.json
